--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
+<div class =" center jumbotron">
+
 <h1>Home</h1>
 
 
-<%= link_to 'Films', films_path%>
+<%= link_to 'Sign up', '#',class: "btn btn-primary btn-lg"%>
