Desgine Completed Views/Messages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,7 +38,7 @@ background-image: asset-url('bgshow');
 
 background-size: cover;
 
-height: 550px;
+height: 380px;
 
 }
 
@@ -101,5 +101,47 @@ footer ul li {
 float: left;
 
 margin-left: 15px;
+
+}
+.article-title {
+
+font-weight: bold;
+
+font-size: 1.5em;
+
+}
+
+.article-body {
+
+border-top: 1px solid #eaeaea;
+
+padding-top: 15px;
+
+padding-bottom: 15px;
+
+}
+.well
+{
+	
+	margin-left:40px;
+	margin-top:25px;
+	align:center;
+}
+.form
+{
+	margin-top:75px;
+	margin-left:90px;
+}
+.article-actions {
+
+border-top: 1px solid #eaeaea;
+
+padding-top: 5px;
+
+}
+
+.description {
+
+margin-top: 0;
 
 }
