--- a/app/views/films/_form.html.erb
+++ b/app/views/films/_form.html.erb
@@ -23,11 +23,29 @@
 
 <div class="col-sm-8">
 
-<%= f.text_field :name, class: "form-control", placeholder: "Title of article", autofocus: true %>
+<%= f.text_field :name, class: "form-control", placeholder: "Title of Film", autofocus: true %>
 
 </div>
 
 </div>
+
+ <div class ="form-group">
+ 	<div class ="control-label col-sm-2">
+ 		<%= f.label :Cast %>
+ 	</div>
+ 	<div class ="col-sm-8">
+ 		<%= f.text_field :cast,class:"form-control",placeholder:"Enter the cast"%>
+ 	</div>
+ </div>
+
+ <div class ="form-group">
+ 	<div class ="control-label col-sm-2">
+ 		<%= f.label :Director %>
+ 	</div>
+ 	<div class ="col-sm-8">
+ 		<%= f.text_field :director,class:"form-control",placeholder:"Director cast"%>
+ 	</div>
+ </div>
 
 <div class="form-group">
 
@@ -39,7 +57,8 @@
 
 <div class="col-sm-8">
 
-<%= f.text_field :genere,  class: "form-control", placeholder: "Body of article" %>
+<%= f.text_field :genere,  class: "form-control", placeholder: "Genere
+" %>
 
 </div>
 
@@ -55,12 +74,21 @@
 
 <div class="col-sm-8">
 
-<%= f.text_field :langauge,  class: "form-control", placeholder: "Body of article" %>
+<%= f.text_field :langauge,  class: "form-control", placeholder: "Language" %>
 
 </div>
 
 </div>
 
+<div class="form-group">
+	<div class ="control-label col-sm-2">
+		<%= f.label :ReleaseDate %>
+	</div>
+	<div class ="col-sm-8">
+		
+		<%= f.text_field :release_date, data:{ provide:'datepicker' } %>
+	</div>
+</div>
 <div class="form-group">
 
 <div class="col-sm-offset-2 col-sm-10">
