--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -30,9 +30,9 @@
 
 <div class="article-actions">
 
-<%= link_to "Edit this article", edit_film_path(film), class: "btn btn-xs btn-primary" %>
+<%= link_to "Edit this Film", edit_film_path(film), class: "btn btn-xs btn-primary" %>
 
-<%= link_to "Delete this article", film_path(film), method: :delete,
+<%= link_to "Delete this Film", film_path(film), method: :delete,
 
 data: { confirm: "Are you sure you want to delete the article?"},
 
