--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
     
 <div class ="container">
     <%= yield %>
+
   </div>
   <%= render 'layouts/footer'%>
+  <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
