--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -103,6 +103,14 @@ float: left;
 margin-left: 15px;
 
 }
+
+.article-meta-details {
+
+border-top: 1px solid #eaeaea;
+
+margin-top: 10px;
+
+}
 .article-title {
 
 font-weight: bold;
@@ -135,7 +143,7 @@ padding-bottom: 15px;
 .article-actions {
 
 border-top: 1px solid #eaeaea;
-
+margin-top:7px;
 padding-top: 5px;
 
 }
