--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -28,6 +28,16 @@
 
 </div>
 
+<div class="article-meta-details">
+
+<small>Created by: <%= film.user.username if film.user%>,
+
+<%= time_ago_in_words(film.created_at) %> ago,
+
+last updated: <%= time_ago_in_words(film.updated_at) %> ago</small>
+
+</div>
+
 <div class="article-actions">
 
 <%= link_to "Edit this Film", edit_film_path(film), class: "btn btn-xs btn-primary" %>
