--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -2,54 +2,4 @@
 <h1 align="center">Listing all Movies</h1>
 <hr>
 
-<% @films.each do |film| %>
-
-<div class="row">
-
-<div class="col-xs-8 col-xs-offset-2">
-
-<div class="well well-lg " >
-
-<div class="article-title">
-
-<%= link_to film.name, film_path(film) %>
-
-</div>
-
-<div class="article-body">
-
-<%= truncate(film.genere, length: 100) %>
-
-</div>
-
-<div class="article-body">
-
-<%= truncate(film.langauge, length: 100) %>
-
-</div>
-
-<div class="article-meta-details">
-
-<small>Created by: <%= film.user.username if film.user%>,
-
-<%= time_ago_in_words(film.created_at) %> ago,
-
-last updated: <%= time_ago_in_words(film.updated_at) %> ago</small>
-
-</div>
-
-<div class="article-actions">
-
-<%= link_to "Edit this Film", edit_film_path(film), class: "btn btn-xs btn-primary" %>
-
-<td><%= link_to 'Delete', film_path(film), method: :delete, data: {confirm: "Are you sure?"} ,class: "btn btn-xs btn-danger" %></td>
-
-</div>
-
-</div>
-
-</div>
-
-</div>
-
-<% end %>
+<%= render 'film', obj: @films %>
