--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,6 +31,13 @@ text-decoration: none;
 text-align: center;
 
 }
+.listing {
+
+list-style: none;
+
+padding-left: 0;
+
+}
 
 .jumbotron {
 
@@ -116,6 +123,7 @@ margin-top: 10px;
 font-weight: bold;
 
 font-size: 1.5em;
+margin-top:5px;
 
 }
 
