--- a/app/views/films/show.html.erb
+++ b/app/views/films/show.html.erb
@@ -1,11 +1,36 @@
 
 <h2 align="center">Title: <%= @films.name %></h2>
 
-<div class="well col-xs-8 col-xs-offset-2">
+<div class="well col-xs-10 col-xs-offset-6 ">
 
-<h4 class="center description"><strong>Description:</strong></h4>
+
+<ul class="listing">
+
+	<div class="row center" >
+
+	<div class=" col-md-4 col-md-offset-4">
+
+	<li><%= link_to gravatar_for(@films.user), user_path(@films.user) %></li>
+
+	<li class="article-title">
+
+	<%= link_to @films.user.username, user_path(@films.user) %>
+
+	</li>
+
+	<li><small><%= pluralize(@films.user.films.count, "article") if @films.user.films %></small></li>
+
+	</div>
+
+	</div>
+
+	</ul>
+
+	<h4 class="center description"><strong>Description:</strong></h4>
 
 <hr>
+
+
 
 Genere <%= simple_format(@films.genere) %>
 Langauage<%= simple_format(@films.langauge) %>
