--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -1,5 +1,10 @@
 
 <h1 align="center">Listing all Movies</h1>
 <hr>
-
+<div align ="center">
+	<%=will_paginate  %>
+	</div>
 <%= render 'film', obj: @films %>
+<div align ="center">
+	<%=will_paginate  %>
+	</div>
