--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,13 +10,15 @@
         <span class="icon-bar"></span>
       </button>
      
-     <%= link_to "Movies", root_path,class: "navbar-brand",id:"logo"%>
+     <%= link_to "FilmyGyan", root_path,class: "navbar-brand",id:"logo"%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        
+        <%= link_to "Movies", films_path,class: "navbar-brand"%>
+        
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
