--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,20 +19,23 @@
         
         <%= link_to "Movies", films_path,class: "navbar-brand"%>
         
-        <li><a href="#">Link</a></li>
+        <li><%= link_to "Users", users_path%></li>
+
+        <% if logged_in? %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+
           <ul class="dropdown-menu">
-            
-            <%= link_to "Add Film", new_film_path,class: "dropdown" %>
-            <li><a href="#">Another action</a></li>
+            <li><%= link_to "Add Films", edit_user_path(current_user)%>
+              
+            </li>
+            <li><%=link_to "Show Profile", user_path(current_user)%> </li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
+        <%end %>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -44,10 +47,12 @@
         <%if logged_in? %>
         <li><%= link_to 'Log out', logout_path, method: :delete %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><%= link_to "Edit User-profile", edit_user_path(current_user)%>
+              
+            </li>
+            <li><%=link_to "Show Profile", user_path(current_user)%> </li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
