--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,4 @@
 <div class =" center jumbotron">
 
-<h1>Home</h1>
-
-
-<%= link_to 'Sign up', '#',class: "btn btn-primary btn-lg"%>
+<%= link_to 'Sign up', signup_path,class: "btn btn-primary btn-lg"%>
+</div>
