--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
 
           <ul class="dropdown-menu">
-            <li><%= link_to "Add Films", edit_user_path(current_user)%>
+            <li><%= link_to "Add Films", new_film_path%>
               
             </li>
             <li><%=link_to "Show Profile", user_path(current_user)%> </li>
