--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,13 @@
 	</li>
 
 	<li><small><%= pluralize(user.films.count, "article") if user.films %></small></li>
+<% if logged_in? and current_user.admin? %>
 
+<li><%= link_to "Delete this user", user_path(user), method: :delete,
+
+data: { confirm: "Are you sure you want to delete the user and all their articles?" } %></li>
+
+<% end %>
 	</div>
 
 	</div>
